🔧 (.npmrc): add authentication token for npm.pkg.github.com registry and set registry URL for @dkimura-org 🔧 (.vscode/settings.json): update default formatter to esbenp.prettier-vscode for JSON files 🔧 (package.json): change license to UNLICENSED and add repository URL 🔧 (packages/styled-system/package.json): update package name to @dkimura-org/styled-system and version to 0.0.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "monorepo",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dkimura-org/monorepo.git"
+  },
   "scripts": {
     "build": "turbo build",
     "format": "turbo format",
