--- a/packages/arithmetics/package.json
+++ b/packages/arithmetics/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dkimura-san/arithmetics",
-  "version": "0.0.1",
+  "name": "@dkimura-org/arithmetics",
+  "version": "0.0.0",
   "type": "module",
   "exports": {
     ".": {
